# inbox-copilot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
backend/app/: main.py  status.py
backend/app/api/: drafts.py  run.py  secrets.py
docs/: ARCHITECTURE.md
frontend/: eslint.config.js  index.html  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
scripts/: create_drafts_from_interviews.py  run_once.py
src/inbox_copilot/: models.py
src/inbox_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/inbox_copilot/actions/: executor.py  handlers.py
src/inbox_copilot/app/: run.py
src/inbox_copilot/config/: paths.py
src/inbox_copilot/extractors/: summary.py  todos.py
src/inbox_copilot/gmail/: LabelColors.py  client.py
src/inbox_copilot/parsing/: parser.py
src/inbox_copilot/pipeline/: orchestrator.py  policy.py
src/inbox_copilot/rules/: BaseRule.py  actions.py  builtins.py  classification.py  core.py  rules.py
src/inbox_copilot/storage/: state.py
tests/backend/: test_draft_subject.py
tests/pipeline/: test_policy.py
tests/storage/: test_state.py
